themes/SL/static/css/base.css
/* ... */
.copy-left {
    -moz-transform: scaleX(-1);
    -ms-filter: “FlipH”;
    -o-transform: scaleX(-1);
    -webkit-transform: scaleX(-1);
    display: inline-block;
    filter: FlipH;
    margin: 0;
    text-align: right;
    transform: scaleX(-1);
}

.no-li-marker {
    list-style: none;
}

.tags {
    margin-bottom: 1rem;
    margin-top: 1rem;
    line-height: 2.25em;
}

.tags-index {
    margin-bottom: 1rem;
    margin-top: 1rem;
}

.inline-icon {
    display: inline-block;
    float: right;
    padding-top: 0.3rem;
}

::-moz-selection {
    /* Code for Firefox */
    background: #007bff;
    color: #ffffff;
}

::selection {
    background: #007bff;
    color: #ffffff;
}

nav i {
    color: #ffffff;
}

i {
    color: #002e5f;
    margin-left: 0.2em;
    margin-right: 0.3em;
}

.i-categories-align {
    margin-right: 0.2em;
    color: #006BFF;
}

#bg-darker {
    background-color: #000000;
    text-shadow: 0 0 1px black;
    background-image: url("/theme/images/header/abstract_path.svg");
    background-position-x: 0;
    background-position-y: 100px;
    background-repeat: no-repeat;
    background-size: 40%;
}

.only-big-screen {
    display: none;
}

dd {
    margin-bottom: 2em;
}

dl {
    line-height: 1.25;
}
/* end BASE TEMPLATE */

/* SCROLLBAR */
body::-webkit-scrollbar {
    background-color: #ffffff;
    width: 0;
}

body::-webkit-scrollbar:hover {
    background-color: #e9ecef;
}

body::-webkit-scrollbar-track {
    -moz-box-shadow: inset 0 0 6px #ffffff;
    -webkit-box-shadow: inset 0 0 6px #ffffff;
    box-shadow: inset 0 0 6px #ffffff;
}

body::-webkit-scrollbar-thumb {
    background-color: #007bff;
    outline: 1px solid #ffffff;
}

/* end SCROLLBAR */

/* FOOTER */
.footer-borders {
    background-image: url("/theme/images/footer/contributions.svg");
    background-repeat: repeat;
    padding: 12px 0;
}

#contentinfo {
    background-color: #000000;
    border-bottom: 1px solid #cedbd9;
    border-top: 1px solid #cedbd9;
    color: #CEDBD9;
    display: table;
    font-size: 0.8rem;
    margin: 10px 0 10px 0;
    padding: 25px 0 25px 0;
    position: relative;
    text-align: center;
    width: 100%;
}

address {
    display: table-cell;
    font-style: normal;
    line-height: inherit;
    padding: 15px;
    text-shadow: 0 0 3px black;
    vertical-align: middle;
}

.footer-icons {
    display: table-header-group;
}

#contentinfo a:hover {
    color: #C6D7E0;
}

.hover-footer-bg {
    -moz-transition: .3s ease-in-out;
    -webkit-transition: .3s ease-in-out;
    opacity: 1;
    transition: .3s ease-in-out;
}

.hover-footer-bg:hover {
    color: #fff;
}

.get-in-touch-icons {
    display: inline-flex;
}

#author-footer li {
    display: inline-flex;
    height: 16px;
    list-style: none;
    padding-left: 5px;
    width: 16px;
}

#author-footer li a img {
    height: 16px;
    width: 16px;
}

.version-footer {
    background-color: #fff;
    border: 1px #cedbd9 solid;
    bottom: 0.25em;
    color: #000;
    font-family: monospace;
    font-size: 0.7rem;
    letter-spacing: 0.10rem;
    padding-left: 0.3em;
    padding-right: 0.3em;
    position: absolute;
    right: 0.25em;
}

.mini-icon {
    height: 1rem;
    width: auto;
}

footer .social-footer {
    list-style: none;
    padding: 10px;
}

footer .social-footer li {
    display: inline-flex;
    margin: 0 10px;
}

footer .social-footer li:hover a {
    color: #ffffff;
}

footer a img {
    -moz-transition: .3s ease;
    -webkit-transition: .3s ease;
    height: 32px;
    margin: 0 5px;
    opacity: 1;
    transition: 0.3s ease;
    width: 32px;
}

footer a img:hover {
    -moz-filter: drop-shadow(0px 0 10px #134d6b);
    -webkit-filter: drop-shadow(0px 0 10px #134d6b);
    -webkit-filter: drop-shadow(0px 0 10px #134d6b);
    filter: drop-shadow(0px 0 10px #ffffff8a);
    opacity: 0.9;
}

div#author-footer {
    margin-top: 1.5rem;
}

/* end FOOTER */

/* ARTICLE PAGE */
.category-article {
    display: block;
}

.max-size-img-post {
    display: block;
    margin-left: auto;
    margin-right: auto;
    max-width: 90%;
}

.max-size-img-profile {
    display: block;
    margin-left: auto;
    margin-right: auto;
    max-width: 60%;
}

#contentinfo a {
    color: #fff;
}

#content {
    height: auto;
    margin: 0;
    min-height: 100%;
    padding-bottom: 1rem;
}

section#content:after {
    content: "";
    display: block;
    height: 1px;
}

.modified {
    font-size: 0.95rem;
    line-height: 200%;
    padding-left: 10px;
}

.post-info-space {
    padding-left: 0.5rem;
}

.card-body {
    padding: 1em;
}

.card-body>hr {
    margin-bottom: 2rem;
    margin-top: 2rem;
}

.card-body>ul {
    padding-left: 0;
}

.card-body>ul>li {
    margin-left: 1.5rem;
    padding: 0.5rem;
}

/* Clears up issue with borders around PNG images */
.entry-content p a:not([href$=".png"]) {
    background-color: #e5f1ff;
    border: 1px solid #fff;
    padding: 0 3px 0 3px;
}

.entry-content p a:hover:not([href$=".png"]) {
    background-color: #e5f1ffbf;
    border: 1px solid #cedbd9;
    text-decoration: none;
}

.entry-content p a:visited:not([href$=".png"]) {
    background-color: #f5e1ff;
}
/* end ARTICLE PAGE */

/* INDEX PAGE */
.paginator {
    margin: 20px;
    text-align: center;
}

/* end INDEX PAGE */

/* DISQUS */
#error {
    padding: 1em;
}

.position-comments-count {
    text-align: right;
    padding: 1em;
}

.position-comments-count a:link,
.position-comments-count a:visited,
.position-comments-count,
a:hover {
    color: #ffffff
}

#disqus_thread {
    padding: 0.5rem;
}

div#layout {
    padding: 0.5rem;
}
/* end DISQUS */

/* CODE BLOCKS */
table {
    display: block;
    overflow-x: auto;
    white-space: nowrap;
}

pre {
    padding: 0 10px;
    margin-bottom: 2.5rem;
}

.linenodiv {
    background-color: #d4e5ea;
}

/* end CODE BLOCKS */

/* PAGE LEARNING-PROCESS */
.no-padding {
    padding: 0;
}

.learning-year {
    font-size: x-large;
    font-weight: bold;
    padding-bottom: 1em;
    text-align: center;
}
/* ... */

